parslers-benchmark/src/tests/invalid/semanticErr/read/readTypeErr01.wacc
# read into pair type

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  pair(int, int) p = newpair(1,2);
  read p
end

